// Copyright 2016-2023, Pulumi Corporation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/struct.proto";

package pulumirpc;

option go_package = "github.com/pulumi/pulumi/sdk/v3/proto/go;pulumirpc";

// Callbacks is a service for invoking functions in one runtime from other processes.
service Callbacks {
    // Invoke invokes a given callback, identified by its token.
    rpc Invoke(CallbackInvokeRequest) returns (CallbackInvokeResponse) {}
}

message Callback {
    // the gRPC target of the callback service.
    string target = 1;
    // the service specific unique token for this callback.
    string token = 2;
}

message CallbackInvokeRequest {
    // the token for the callback.
    string token = 1;
    // the serialized protobuf message of the arguments for this callback.
    bytes request = 2;
}

message CallbackInvokeResponse {
    // the serialized protobuf message of the response for this callback.
    bytes response = 1;
}
